--- a/src/Makefile
+++ b/src/Makefile
@@ -5,11 +5,12 @@ KDIR := /lib/modules/$(KERNEL_VERSION)/build
 DESTDIR ?= /
 PWD := $(shell pwd)
 VERSION := $(shell git rev-parse HEAD 2>/dev/null)
+FLAGS :=
 default:
-	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
+	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) CFLAGS_MODULE="$(FLAGS)" modules
 
 debug:
-	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) CFLAGS_MODULE="-DXT_TLS_LIST_DEBUG" modules
+	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) CFLAGS_MODULE="-DXT_TLSLIST_DEBUG" modules
 
 install:
 	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) INSTALL_MOD_PATH=$(DESTDIR) modules_install
