--- a/src/Makefile
+++ b/src/Makefile
@@ -7,13 +7,13 @@ PWD := $(shell pwd)
 VERSION := $(shell git rev-parse HEAD 2>/dev/null)
 FLAGS :=
 default:
-	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) CFLAGS_MODULE="$(FLAGS)" modules
+	    $(MAKE) -C $(KDIR) M=$(PWD) CFLAGS_MODULE="$(FLAGS)" modules
 
 debug:
-	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) CFLAGS_MODULE="-DXT_TLSLIST_DEBUG" modules
+	    $(MAKE) -C $(KDIR) M=$(PWD) CFLAGS_MODULE="-DXT_TLSLIST_DEBUG" modules
 
 install:
-	    $(MAKE) -C $(KDIR) SUBDIRS=$(PWD) INSTALL_MOD_PATH=$(DESTDIR) modules_install
+	    $(MAKE) -C $(KDIR) M=$(PWD) INSTALL_MOD_PATH=$(DESTDIR) modules_install
 	    depmod -a
 
 uninstall:
